--- a/DjayAccounts.Api/DjayAccounts.Api.csproj
+++ b/DjayAccounts.Api/DjayAccounts.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DjayAccounts.Core\DjayAccounts.Core.csproj" />
+  </ItemGroup>
+
 </Project>
